# gui

./: .clang-format  .gitignore  CHANGES.md  CMakeLists.txt  README.md  RPI.md  bootstrap.cmake  designlab.json  profile.sh  sl_workspace_settings.json
SDK/: CMakeLists.txt  README.md  depends.code-workspace
SDK/config/: lv_conf.h  lwipopts.h  sos_config.h
SDK/config/mbedtls/: config.h
assets/: dark.json  icon.drawio  icon.icns
designlab/assets/: assets.assetfs  icon.drawio  icon.icns  icon2.drawio
designlab/fonts/: CMakeLists.txt
designlab/fonts/fontawesome/: fa-brands.json  fa-regular.json  fa-solid.json
designlab/themes/: colors-dark.json  colors-light.json  dark.json  fonts-default.json  fonts-small.json  lvgl-default-dark.json  lvgl-default-light.json  lvgl-small-dark.json  lvgl-small-light.json  lvgl_small_dark.c  lvgl_small_light.c  rules-lvgl.json  sizes-default.json  sizes-small.json  styles-lvgl.json
docs/: overview.drawio
fonts/: CMakeLists.txt
gui/: CMakeLists.txt  sl_settings.json
gui/src/: About.cpp  About.hpp  Application.cpp  Application.hpp  CMakeLists.txt  Files.cpp  Files.hpp  Github.cpp  Github.hpp  GuiObject.hpp  ThemeGenerator.cpp  ThemeGenerator.hpp  main.cpp
gui/src/assetfs/: CMakeLists.txt  data_assetfs.c
gui/src/designlab/: CMakeLists.txt
gui/src/designlab/assets/: assets.assetfs
gui/src/designlab/fonts/: FontAwesomeIcons.hpp  fonts.c  fonts.h  montserrat_r_12.c  montserrat_r_14.c  montserrat_r_16.c  montserrat_r_18.c  montserrat_r_19.c  montserrat_r_21.c  montserrat_r_28.c  montserrat_r_32.c  montserrat_r_36.c  montserrat_r_56.c  montserrat_r_64.c  montserrat_r_72.c  montserrat_sb_12.c  montserrat_sb_14.c  montserrat_sb_16.c  montserrat_sb_18.c  montserrat_sb_21.c  montserrat_sb_22.c  montserrat_sb_26.c  montserrat_sb_28.c  montserrat_sb_30.c  montserrat_sb_31.c  montserrat_sb_36.c  montserrat_sb_44.c  montserrat_sb_52.c  montserrat_sb_56.c  montserrat_sb_60.c  montserrat_sb_72.c  montserrat_sb_88.c  sourcecode_r_10.c  sourcecode_r_12.c  sourcecode_r_16.c  sourcecode_r_20.c  sourcecode_r_24.c  sourcecode_r_32.c  sourcecode_r_40.c  sourcecode_r_6.c  (+3 more)
gui/src/designlab/themes/: default_dark_highdpi.c  default_dark_medium.c  default_dark_small.c  default_light_highdpi.c  default_light_medium.c  default_light_small.c  lvgl_default_dark.c  lvgl_default_light.c  lvgl_small_dark.c  lvgl_small_light.c  themes.c  themes.h
gui/src/fonts/: CMakeLists.txt  Icons.hpp  fonts.c  fonts.h  montserrat_i_12.c  montserrat_i_16.c  montserrat_i_20.c  montserrat_i_24.c  montserrat_i_28.c  montserrat_i_32.c  montserrat_i_36.c  montserrat_i_40.c  montserrat_i_44.c  montserrat_i_48.c  montserrat_i_52.c  montserrat_i_56.c  montserrat_i_60.c  montserrat_i_64.c  montserrat_i_68.c  montserrat_i_72.c  montserrat_i_8.c  montserrat_l_12.c  montserrat_l_16.c  montserrat_l_20.c  montserrat_l_24.c  montserrat_l_28.c  montserrat_l_32.c  montserrat_l_36.c  montserrat_l_40.c  montserrat_l_44.c  montserrat_l_48.c  montserrat_l_52.c  montserrat_l_56.c  montserrat_l_60.c  montserrat_l_64.c  montserrat_l_68.c  montserrat_l_72.c  montserrat_l_8.c  montserrat_r_12.c  montserrat_r_16.c  (+49 more)
gui/src/model/: Model.hpp
gui/src/themes/: CMakeLists.txt  dark_theme.c  themes.h
gui/src/view/: About.cpp  About.hpp  Extras.cpp  Extras.hpp  Files.cpp  Files.hpp  Github.cpp  Github.hpp  Home.cpp  Home.hpp  ViewObject.hpp
gui/src/worker/: GithubWorker.cpp  GithubWorker.hpp
