cmake_minimum_required(VERSION 3.12)
project(${PROJECT_NAME}-SDK)
set(API_IS_SDK TRUE CACHE INTERNAL "Build SDK projects")
set(BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dependencies)
file(MAKE_DIRECTORY ${BASE_DIRECTORY})
message(STATUS "Base directory ${BASE_DIRECTORY}")
function(sdk_add_subdirectory NAME BRANCH)
  cmsdk_git_clone_or_pull_branch(${BASE_DIRECTORY} ${NAME} https://github.com/StratifyLabs/${NAME}.git ${BRANCH})
  add_subdirectory(${BASE_DIRECTORY}/${NAME} ${NAME} EXCLUDE_FROM_ALL)
endfunction()
include(CTest)
option(SDK_IS_TEST "Enable all SDK API tests" OFF)
message(STATUS "Enable all tests? " ${SDK_IS_TEST})
if(SDK_IS_TEST)
  message(STATUS "Enabling tests for Api, Inet, Json, and Crypto")
  set(API_IS_TEST ON CACHE INTERNAL "Enable API Test")
  set(INET_API_IS_TEST ON CACHE INTERNAL "Enable InetAPI Test")
  set(JSON_API_IS_TEST ON CACHE INTERNAL "Enable JsonAPI Test")
  set(CRYPTO_API_IS_TEST ON CACHE INTERNAL "Enable CryptoAPI Test")
endif()
set(LODEPNG_DEFINITIONS "__lodepng;LODEPNG_NO_COMPILE_ENCODER=1;LODEPNG_NO_COMPILE_CPP=1;LODEPNG_NO_COMPILE_DISK=1" CACHE INTERNAL "Defintions for compiling lodepng")
set(SOS_CONFIG_PATH ${CMAKE_CURRENT_SOURCE_DIR}/config CACHE INTERNAL "StratifyOS config directory")
set(LWIP_STRATIFYOS_PATH
  ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/StratifyOS/include
  CACHE INTERNAL "LWIP StratifyOS INCLUDE PATHS")
if(${CMSDK_IS_ARM})
  set(API_PUBLIC_COMPILE_OPTIONS -Os CACHE INTERNAL "API Public compile options")
else()
  set(API_PUBLIC_COMPILE_OPTIONS -O3 -fsanitize=address CACHE INTERNAL "API Public compile options")
  set(API_PUBLIC_LINK_OPTIONS -fsanitize=address CACHE INTERNAL "API Public Link options")
endif()
set(API_PUBLIC_DEBUG_COMPILE_OPTIONS -g CACHE INTERNAL "API Public debug compile options -g")
sdk_add_subdirectory(API main)
include(${BASE_DIRECTORY}/API/libraries/API.cmake)
set(LVGL_NO_STRATIFY_OS ON CACHE INTERNAL "No dependecies on Stratify OS")
set(LVGL_CONFIG_PATH ${CMAKE_CURRENT_SOURCE_DIR}/config CACHE INTERNAL "LVGL config path")
set(LWIP_CONFIG_PATH ${CMAKE_CURRENT_SOURCE_DIR}/config CACHE INTERNAL "LWIP config path")
set(MBEDTLS_CONFIG_FILE ${CMAKE_CURRENT_SOURCE_DIR}/config/mbedtls/config.h CACHE INTERNAL "MBEDTLS config file")
add_subdirectory(dependencies/CMakeSDK CMakeSDK)
if(CMSDK_IS_ARM)
  sdk_add_subdirectory(StratifyOS v4.2)
  sdk_add_subdirectory(SosAPI v1.2)
  sdk_add_subdirectory(HalAPI v1.2)
endif()
sdk_add_subdirectory(JsonAPI main)
sdk_add_subdirectory(InetAPI main)
sdk_add_subdirectory(CryptoAPI main)
#These are still in pre-release
sdk_add_subdirectory(WindowAPI main)
sdk_add_subdirectory(LvglAPI main)
sdk_add_subdirectory(DesignAPI main)
